fixed spacing

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ p {
 li {
     padding-left: 3rem;
     padding-top: 10rem;
+    padding-right: 3rem;
     font-size: 180%;
 }
 
